# cookiecutter-pyproject-2025

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  pyproject.toml  run.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml
docs/: console_script_setup.md  index.md  prompts.md  troubleshooting.md  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yaml  justfile  lychee.toml  mkdocs.yml  osv-scanner.toml  pyproject.toml  ruff.toml  ties.toml  tox.toml
{{cookiecutter.project_slug}}/.claude/: claude-pre-commit.sh  get-pre-commit-config.py  settings.local.json
{{cookiecutter.project_slug}}/.claude/commands/: pre-commit.md
{{cookiecutter.project_slug}}/.cursor/rules/: instructions.mdc
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  bake.hcl  devcontainer.json  initializeCommand  postCreateCommand  postStartCommand
{{cookiecutter.project_slug}}/.devcontainer/install-scripts/: install-gcloud.sh  install-gh.sh  install-go.sh  install-kubectl.sh
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/workflows/: ci-buildx-bake.yml  ci-orchestrator.yml  docs.yml  pre-commit.yml
{{cookiecutter.project_slug}}/.ties/: instructions-tie.md
{{cookiecutter.project_slug}}/docs/: examples.md  index.md  user-guide.md
{{cookiecutter.project_slug}}/knowledge/pdfs/llada/: summary.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _example.py  cli.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
