[project]
name = "cookiecutter-pyproject-2025"
version = "0.2.0"
description = "Cookiecutter template for a Python project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alon Kellner", email = "me@alonkellner.com" }
]
keywords = ["cookiecutter", "template", "project"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.16.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "pytest-cookies",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[project.urls]
homepage = "https://github.com/AlonKellner/cookiecutter-pyproject-2025"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "rust-just>=1.42.4",
]